[gd_scene load_steps=16 format=2]

[ext_resource path="res://Gridmap/MeshLibrary.tres" type="MeshLibrary" id=1]
[ext_resource path="res://Creature/Creature.tscn" type="PackedScene" id=2]
[ext_resource path="res://Totem/Monument1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Totem/Orb1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Map/Map.gd" type="Script" id=6]
[ext_resource path="res://Animations/Monster_Summoning.tscn" type="PackedScene" id=7]
[ext_resource path="res://Totem/MonumentGreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Totem/MonumentBlue.tscn" type="PackedScene" id=9]
[ext_resource path="res://Totem/MonumentYellow.tscn" type="PackedScene" id=10]
[ext_resource path="res://Totem/MonumentPink.tscn" type="PackedScene" id=11]
[ext_resource path="res://Totem/OrbGreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://Totem/OrbBlue.tscn" type="PackedScene" id=13]
[ext_resource path="res://Totem/OrbYellow.tscn" type="PackedScene" id=14]
[ext_resource path="res://Totem/OrbPink.tscn" type="PackedScene" id=15]

[node name="Map" type="Spatial"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.561203, 1.92719, 5.8449 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 536870912, 4, 0, 536870912, 5, 0, 536870912, 6, 0, 536870912, 7, 0, 536870912, 8, 0, 538312704, 9, 0, 1441792, 65526, 0, 538312704, 65528, 0, 538312704, 65529, 0, 538312704, 65530, 0, 538312704, 65531, 0, 1441792, 65532, 0, 0, 65533, 0, 536870912, 65534, 0, 0, 65535, 0, 1, 0, 1, 536870912, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 1073741824, 6, 1, 0, 7, 1, 0, 8, 1, 1441792, 65525, 1, 538312704, 65526, 1, 1441792, 65528, 1, 1441792, 65529, 1, 1075183616, 65530, 1, 1441792, 65531, 1, 1441792, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 1, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 536870912, 5, 2, 536870912, 6, 2, 0, 7, 2, 0, 8, 2, 1441792, 65526, 2, 538312704, 65528, 2, 1441792, 65529, 2, 1441792, 65530, 2, 1441792, 65531, 2, 1441792, 65532, 2, 1441792, 65533, 2, 0, 65534, 2, 1441792, 65535, 2, 1, 0, 3, 0, 1, 3, 1441792, 2, 3, 1441792, 3, 3, 1441792, 4, 3, 0, 5, 3, 0, 6, 3, 1073741824, 7, 3, 0, 8, 3, 1441792, 65526, 3, 1441792, 65528, 3, 1441792, 65529, 3, 1441792, 65530, 3, 1441792, 65531, 3, 1441792, 65532, 3, 538312704, 65533, 3, 1441792, 65534, 3, 538312704, 65535, 3, 1, 0, 4, 1073741824, 1, 4, 1441792, 2, 4, 1441792, 3, 4, 1441792, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 1441792, 65527, 4, 1441792, 65528, 4, 1441792, 65529, 4, 1441792, 65530, 4, 1441792, 65531, 4, 538312704, 65532, 4, 1441792, 65533, 4, 1441792, 65534, 4, 538312704, 65535, 4, 536870913, 0, 5, 1441792, 1, 5, 538312704, 2, 5, 1441792, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 536870912, 8, 5, 1441792, 65527, 5, 1441792, 65528, 5, 1441792, 65529, 5, 1441792, 65530, 5, 1441792, 65531, 5, 538312704, 65532, 5, 1441792, 65533, 5, 538312704, 65534, 5, 538312704, 65535, 5, 1, 0, 6, 1441792, 1, 6, 1441792, 2, 6, 1441792, 3, 6, 1441792, 4, 6, 536870912, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 1441792, 65527, 6, 1441792, 65528, 6, 1441792, 65529, 6, 1441792, 65530, 6, 1441792, 65531, 6, 1441792, 65532, 6, 1441792, 65533, 6, 1441792, 65534, 6, 538312704, 65535, 6, 1, 0, 7, 1441792, 1, 7, 1441792, 2, 7, 1441792, 3, 7, 1441792, 4, 7, 0, 5, 7, 536870912, 6, 7, 0, 7, 7, 0, 8, 7, 1441792, 65527, 7, 1441792, 65528, 7, 1441792, 65529, 7, 538312704, 65530, 7, 1441792, 65531, 7, 1441792, 65532, 7, 1441792, 65533, 7, 1441792, 65534, 7, 1441792, 65535, 7, 1441792, 0, 8, 538312704, 1, 8, 1441792, 2, 8, 1441792, 3, 8, 1441792, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 1441792, 65527, 8, 1441792, 65528, 8, 1441792, 65529, 8, 1441792, 65530, 8, 1441792, 65531, 8, 1441792, 65532, 8, 1441792, 65533, 8, 1441792, 65534, 8, 1441792, 65535, 8, 1, 0, 9, 538312704, 1, 9, 1441792, 2, 9, 1441792, 3, 9, 1441792, 4, 9, 1441792, 5, 9, 1441792, 6, 9, 1441792, 7, 9, 1441792, 8, 9, 1441792, 65527, 9, 1441792, 65528, 9, 1441792, 65529, 9, 1441792, 65530, 9, 1441792, 65531, 9, 1441792, 65532, 9, 1441792, 65533, 9, 1441792, 65534, 9, 1441792, 65535, 9, 1, 0, 10, 1441792, 1, 10, 1441792, 2, 10, 1441792, 3, 10, 1441792, 4, 10, 1441792, 5, 10, 1441792, 6, 10, 1441792, 7, 10, 538312704, 8, 10, 1441792, 65527, 10, 1441792, 65528, 10, 1441792, 65529, 10, 1441792, 65530, 10, 1441792, 65531, 10, 1441792, 65532, 10, 1441792, 65533, 10, 1441792, 65534, 10, 1441792, 65535, 10, 1, 0, 11, 1441792, 1, 11, 1441792, 2, 11, 1441792, 3, 11, 1441792, 4, 11, 1441792, 5, 11, 1441792, 6, 11, 1441792, 7, 11, 1441792, 8, 11, 1441792, 15, 11, 0, 65527, 11, 1441792, 65528, 11, 1441792, 65529, 11, 538312704, 65530, 11, 1441792, 65531, 11, 1441792, 65532, 11, 1441792, 65533, 11, 1441792, 65534, 11, 1441792, 65535, 11, 1, 0, 12, 1441792, 1, 12, 1441792, 2, 12, 1441792, 3, 12, 1441792, 4, 12, 1441792, 5, 12, 1441792, 6, 12, 1441792, 7, 12, 1441792, 8, 12, 1441792, 65528, 12, 1441792, 65529, 12, 1441792, 65530, 12, 1441792, 65531, 12, 1441792, 65532, 12, 1441792, 65533, 12, 1441792, 65534, 12, 1441792, 65535, 12, 1, 0, 13, 1441792, 1, 13, 1441792, 2, 13, 1441792, 3, 13, 1441792, 4, 13, 1441792, 5, 13, 1441792, 6, 13, 1441792, 7, 13, 1441792, 8, 13, 1441792, 9, 13, 1441792, 65529, 13, 1441792, 65534, 13, 1441793, 65535, 13, -1073741822, 1, 14, 1441792, 2, 14, 1441792, 4, 14, 1441792, 5, 14, 1441792, 6, 14, 1441792, 7, 14, 1441792, 8, 14, 1441792, 9, 14, 1441792, 10, 14, 1441792, 5, 15, 538312704, 10, 15, 1441792, 65535, 65525, 1, 65535, 65526, 1, 65535, 65527, 1, 2, 65528, 1441792, 3, 65528, 1441792, 4, 65528, 1441792, 5, 65528, 1612054528, 7, 65528, 1612054528, 8, 65528, 1441792, 65535, 65528, 1075183616, 0, 65529, 1441792, 2, 65529, 1441792, 3, 65529, 1441792, 4, 65529, 1441792, 65529, 65529, 1441792, 65530, 65529, 1441792, 65531, 65529, 1441792, 65532, 65529, 1441792, 65533, 65529, 1441792, 65534, 65529, 1441792, 65535, 65529, 536870913, 0, 65530, 1441792, 1, 65530, 1441792, 2, 65530, 1441792, 3, 65530, 1441792, 65529, 65530, 1441792, 65530, 65530, 1441792, 65531, 65530, 1441792, 65532, 65530, 1441792, 65533, 65530, 1441792, 65534, 65530, 1441792, 65535, 65530, 1441792, 0, 65531, 1441792, 1, 65531, 1441792, 2, 65531, 1441792, 3, 65531, 1441792, 4, 65531, 1441792, 5, 65531, 1441792, 7, 65531, 0, 65528, 65531, -2146041856, 65529, 65531, 1441792, 65530, 65531, 1441792, 65531, 65531, 1441792, 65532, 65531, 1441792, 65533, 65531, -1072300032, 65534, 65531, 1441792, 65535, 65531, 1441792, 0, 65532, 1441792, 1, 65532, 1441792, 2, 65532, 1612054528, 3, 65532, 0, 4, 65532, 0, 5, 65532, 0, 6, 65532, 0, 7, 65532, 0, 65527, 65532, 1441792, 65528, 65532, 1441792, 65529, 65532, 1441792, 65530, 65532, 1441792, 65531, 65532, 1075183616, 65532, 65532, 1441792, 65533, 65532, 1441792, 65534, 65532, 1441792, 65535, 65532, 1441792, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 4, 65533, -1073741824, 5, 65533, 0, 6, 65533, 0, 7, 65533, 0, 65529, 65533, 1441792, 65530, 65533, 1441792, 65531, 65533, 1441792, 65532, 65533, 1441792, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 1, 0, 65534, 0, 1, 65534, 0, 2, 65534, 0, 3, 65534, 0, 4, 65534, 536870912, 5, 65534, 0, 6, 65534, 0, 7, 65534, 0, 8, 65534, 0, 65526, 65534, 1075183616, 65527, 65534, 1441792, 65528, 65534, 1441792, 65529, 65534, 1441792, 65530, 65534, 1612054528, 65531, 65534, 1441792, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 1, 0, 65535, 1048577, 1, 65535, 1048577, 2, 65535, 1048577, 3, 65535, 1048577, 4, 65535, 1048577, 5, 65535, 1048577, 6, 65535, 1048577, 7, 65535, 1048577, 8, 65535, 1048577, 9, 65535, 1048577, 10, 65535, 1048577, 65523, 65535, 1048577, 65524, 65535, 1048577, 65525, 65535, 1611661313, 65526, 65535, 1048577, 65527, 65535, 1441792, 65528, 65535, 1048577, 65529, 65535, 1048577, 65530, 65535, 1441792, 65531, 65535, 1048577, 65532, 65535, 1048577, 65533, 65535, 1048577, 65534, 65535, 1048577, 65535, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Creature" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.355733, 3.08055, -0.145173 )
player_path = NodePath("../Player")

[node name="Orb1" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96397, 1.46451, -0.127322 )
player_path = NodePath("../Player")

[node name="Monument1" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.77396, 1.38456, 0 )
player_path = NodePath("../Player")

[node name="Cutscenes" type="CanvasLayer" parent="."]

[node name="PeredoSummoning" parent="Cutscenes" instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, -62.9383 )

[node name="Monuments" type="Spatial" parent="."]

[node name="MonumentBlue" parent="Monuments" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.79807, 1.31445, 2.39479 )
player_path = NodePath("../../Player")

[node name="MonumentGreen" parent="Monuments" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.67788, 1.33688, -2.15134 )
player_path = NodePath("../../Player")

[node name="MonumentYellow" parent="Monuments" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.60417, 1.31063, -4.45126 )
player_path = NodePath("../../Player")

[node name="MonumentPink" parent="Monuments" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.73214, 1.3044, 4.43613 )
player_path = NodePath("../../Player")

[node name="Orbs" type="Spatial" parent="."]

[node name="OrbBlue" parent="Orbs" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.17969, 1.51178, 2.52919 )
player_path = NodePath("../../Player")

[node name="OrbGreen" parent="Orbs" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.02621, 1.56394, -2.41506 )
player_path = NodePath("../../Player")

[node name="OrbYellow" parent="Orbs" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.84848, 1.37029, -4.58541 )
player_path = NodePath("../../Player")

[node name="OrbPink" parent="Orbs" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.30863, 1.52594, 6.25958 )
player_path = NodePath("../../Player")
[connection signal="activated" from="Monument1" to="." method="_on_Monument1_activated"]
